--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-    "dependencies": {
-        "cheerio": "^1.0.0-rc.3",
-        "formidable": "^1.2.1",
-        "uuid": "^3.3.3"
-    }
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
+    "formidable": "^1.2.1",
+    "uuid": "^3.3.3"
+  }
 }
