--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
+    "mongoose": "^5.11.8",
     "uuid": "^3.3.3"
   }
 }
