--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "mongoose": "^5.11.8",
+    "multer": "^1.4.2",
     "uuid": "^3.3.3"
   }
 }
