--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "formidable": "^1.2.1",
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
-    "uuid": "^3.3.3"
+    "socket.io": "^3.0.4",
+    "uuid": "^3.3.3",
+    "ws": "^7.4.1"
   }
 }
