--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "socket.io": "^3.0.4",
+    "socket.io-stream": "^0.9.1",
     "uuid": "^3.3.3",
     "ws": "^7.4.1"
   }
