--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "socket.io": "^3.0.4",
     "socket.io-stream": "^0.9.1",
     "uuid": "^3.3.3",
+    "websocket-stream": "^5.5.2",
     "ws": "^7.4.1"
   }
 }
