--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
+    "nodejs-websocket": "^1.7.2",
     "socket.io": "^3.0.4",
     "socket.io-stream": "^0.9.1",
     "uuid": "^3.3.3",
