--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "nodejs-websocket": "^1.7.2",
+    "puppeteer": "^5.5.0",
     "socket.io": "^3.0.4",
     "socket.io-stream": "^0.9.1",
     "uuid": "^3.3.3",
