--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "formidable": "^1.2.1",
     "http-proxy-middleware": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.0",
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
     "nodejs-websocket": "^1.7.2",
