--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "formidable": "^1.2.1",
-    "http-proxy-middleware": "^1.0.6",
-    "jsonwebtoken": "^8.5.1",
-    "mime": "^2.5.0",
-    "mongoose": "^5.11.8",
-    "multer": "^1.4.2",
-    "nodejs-websocket": "^1.7.2",
-    "puppeteer": "^5.5.0",
-    "socket.io": "^3.0.4",
-    "socket.io-stream": "^0.9.1",
-    "uuid": "^3.3.3",
-    "websocket-stream": "^5.5.2",
-    "ws": "^7.4.1"
-  }
+    "dependencies": {
+        "art-template": "^4.13.2",
+        "body-parser": "^1.19.0",
+        "cheerio": "^1.0.0-rc.3",
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "express-art-template": "^1.0.1",
+        "express-session": "^1.17.1",
+        "formidable": "^1.2.1",
+        "http-proxy-middleware": "^1.0.6",
+        "jsonwebtoken": "^8.5.1",
+        "mime": "^2.5.0",
+        "mongoose": "^5.11.8",
+        "multer": "^1.4.2",
+        "nodejs-websocket": "^1.7.2",
+        "puppeteer": "^5.5.0",
+        "socket.io": "^3.0.4",
+        "socket.io-stream": "^0.9.1",
+        "uuid": "^3.3.3",
+        "websocket-stream": "^5.5.2",
+        "ws": "^7.4.1"
+    }
 }
