--- a/nodedoc/handle/express/express-router/package.json
+++ b/nodedoc/handle/express/express-router/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.3"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^8.5.1"
   }
 }
