--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "express-art-template": "^1.0.1",
     "express-session": "^1.17.3",
     "formidable": "^1.2.6",
+    "globby": "^14.0.0",
     "http-proxy-middleware": "^1.3.1",
+    "jimp": "^0.22.10",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.6.0",
     "mongoose": "^5.13.20",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodejs-websocket": "^1.7.2",
+    "pino": "^8.17.1",
     "puppeteer": "^21.3.8",
     "sharp": "^0.30.7",
     "socket.io": "^3.1.2",
