--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "mongoose": "^5.13.20",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "mysql2": "^3.12.0",
     "nodejs-websocket": "^1.7.2",
     "pino": "^8.17.1",
     "puppeteer": "^21.3.8",
+    "sequelize": "^6.37.5",
     "sharp": "^0.30.7",
     "socket.io": "^3.1.2",
     "socket.io-stream": "^0.9.1",
