--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-proxy-middleware": "^1.3.1",
     "jimp": "^0.22.10",
     "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.9.1",
     "mime": "^2.6.0",
     "mongoose": "^5.13.20",
     "morgan": "^1.10.0",
