--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -3,10 +3,12 @@
     "@sequelize/core": "^7.0.0-alpha.45",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "md5": "^2.3.0",
     "mockjs": "^1.1.0",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
+    "nodemon": "^3.1.9",
     "sequelize": "^6.37.5",
     "validate.js": "^0.13.1"
   },
@@ -15,7 +17,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon ./index.js"
+    "start": "nodemon ./index.js",
+    "update": "node ./mock/extend/mockUpdatePrompt.js"
   },
   "author": "",
   "license": "ISC",
