--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -3,12 +3,15 @@
     "@sequelize/core": "^7.0.0-alpha.45",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "lzo-utils": "^1.0.3",
     "md5": "^2.3.0",
     "mockjs": "^1.1.0",
     "moment": "^2.30.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "path-to-regexp": "^8.2.0",
     "sequelize": "^6.37.5",
     "validate.js": "^0.13.1"
   },
