--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -5,6 +5,7 @@
     "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "express-session": "^1.18.1",
     "lzo-utils": "^1.0.3",
     "md5": "^2.3.0",
     "mockjs": "^1.1.0",
