--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -3,6 +3,7 @@
     "@sequelize/core": "^7.0.0-alpha.45",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "connect-redis": "^8.0.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express-session": "^1.18.1",
