--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -7,6 +7,8 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "log4js": "^6.9.1",
     "lzo-utils": "^1.0.3",
     "md5": "^2.3.0",
     "mockjs": "^1.1.0",
@@ -16,8 +18,7 @@
     "path-to-regexp": "^8.2.0",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
-    "validate.js": "^0.13.1",
-    "log4js": "^6.9.1"
+    "validate.js": "^0.13.1"
   },
   "name": "sequelize-orm",
   "version": "1.0.0",
