--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -7,12 +7,16 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express-session": "^1.18.1",
+    "file-type": "^20.4.0",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "lzo-utils": "^1.0.3",
     "md5": "^2.3.0",
+    "mime-types": "^2.1.35",
     "mockjs": "^1.1.0",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "path-to-regexp": "^8.2.0",
