--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express-session": "^1.18.1",
     "file-type": "^20.4.0",
+    "http-proxy-middleware": "^3.0.3",
     "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
