--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "path-to-regexp": "^8.2.0",
+    "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
     "validate.js": "^0.13.1"
