--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "path-to-regexp": "^8.2.0",
     "qrcode": "^1.5.4",
