dotenv与.env变量载入

--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -6,6 +6,7 @@
     "connect-redis": "^8.0.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "file-type": "^20.4.0",
     "http-proxy-middleware": "^3.0.3",
