--- a/nodedoc/handle/Sequelize-ORM/.env
+++ b/nodedoc/handle/Sequelize-ORM/.env
@@ -1,1 +1,9 @@
-SECRET_KEY_TEST=ENV文件中的数据
+PORT=5008
+
+MYSQL_DATABASE=duyi_myschooldb
+MYSQL_ACCOUNT=root
+MYSQL_PASSWD=Lzx542684.@
+MYSQL_HOST=192.168.203.132
+
+PROXY_LIST_CODER=http://localhost:8778/
+AUTH_SECRET_KEY=miyao
