helmet安全请求中间件

--- a/nodedoc/handle/Sequelize-ORM/.env
+++ b/nodedoc/handle/Sequelize-ORM/.env
@@ -5,5 +5,8 @@ MYSQL_ACCOUNT=root
 MYSQL_PASSWD=Lzx542684.@
 MYSQL_HOST=192.168.203.132
 
+REDIS_URL=redis://192.168.203.132:6379
+REDIS_PASSWD=Lzx542684.@
+
 PROXY_LIST_CODER=http://localhost:8778/
 AUTH_SECRET_KEY=miyao
