--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "file-type": "^20.4.0",
+    "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.3",
     "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
