express-validator参数校验-未成功先放着

--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "file-type": "^20.4.0",
     "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.3",
