--- a/nodedoc/handle/Sequelize-ORM/Dockerfile
+++ b/nodedoc/handle/Sequelize-ORM/Dockerfile
@@ -18,3 +18,10 @@ EXPOSE 5008
 
 # 启动应用
 CMD ["npm", "start"]
+
+
+# 项目根目录，构建镜像
+# docker build -t <image-name> .
+
+# 创建容器
+# docker run -d --name nodeorm -p 5008:5008 express-orm
