--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -14,6 +14,7 @@
     "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.3",
     "jimp": "^0.22.12",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "log4js": "^6.9.1",
     "lzo-utils": "^1.0.3",
