socketio的基本使用

--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -32,6 +32,7 @@
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
     "svg-captcha": "^1.4.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
