--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -47,7 +47,7 @@
     "start": "node ./swagger/swagger-autogen.js && cross-env NODE_ENV=development nodemon -x node --inspect ./src/index.js",
     "update": "node ./src/mock/extend/mockUpdatePrompt.js",
     "clear": "node ./src/utils/clear.js",
-    "test": "jest --verbose --detectOpenHandles"
+    "test": "cross-env NODE_ENV=development jest --verbose --detectOpenHandles"
   },
   "author": "",
   "license": "ISC",
