微信小程序-登录

--- a/nodedoc/handle/Sequelize-ORM/.env.test
+++ b/nodedoc/handle/Sequelize-ORM/.env.test
@@ -11,3 +11,6 @@ REDIS_PASSWD=Lzx542684.@
 PROXY_LIST_CODER=http://192.168.203.132:8778/
 AUTH_SECRET_KEY=miyao
 SERVER_HTTPS=false
+
+APP_SECRET=8aa50dd52b421df7d8b251b70e3afff0
+APP_ID=wx3ffcef9fc255b0bc
