--- a/nodedoc/handle/Sequelize-ORM/package.json
+++ b/nodedoc/handle/Sequelize-ORM/package.json
@@ -55,6 +55,7 @@
   "description": "",
   "devDependencies": {
     "jest": "^29.7.0",
+    "sequelize-auto": "^0.8.8",
     "supertest": "^7.0.0"
   }
 }
