--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "commit": "git-cz"
+  },
   "dependencies": {
     "art-template": "^4.13.2",
     "body-parser": "^1.20.2",
@@ -30,6 +33,8 @@
     "ws": "^7.5.9"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "commitizen": "^4.3.1",
+    "cross-env": "^7.0.3",
+    "cz-git": "^1.11.1"
   }
 }
