feat(NestJS): typeORM连接MySql

--- a/nodedoc/handle/nestjs/case/nest-demo/.env.development
+++ b/nodedoc/handle/nestjs/case/nest-demo/.env.development
@@ -1,1 +1,17 @@
 HOST=localhost
+
+PORT=5011
+
+DB_TYPE=mysql
+DB_DATABASE=lzo_node_nestjs
+DB_ACCOUNT=root
+DB_PASSWD=Lzx542684.@
+DB_HOST=192.168.203.132
+DB_PORT=3306
+DB_SYNC=true
+
+REDIS_URL=redis://192.168.203.132:6379
+REDIS_PASSWD=Lzx542684.@
+AUTH_SECRET_KEY=miyao
+
+SERVER_HOST=192.168.203.132
