--- a/nodedoc/handle/nestjs/case/nest-demo/package.json
+++ b/nodedoc/handle/nestjs/case/nest-demo/package.json
@@ -24,13 +24,16 @@
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "@types/js-yaml": "^4.0.9",
     "cross-env": "^7.0.3",
     "joi": "^17.13.3",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "mysql2": "^3.14.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
