feat(NestJS): 第一个TypeORM模型的创建

--- a/nodedoc/handle/nestjs/case/nest-demo/.prettierrc
+++ b/nodedoc/handle/nestjs/case/nest-demo/.prettierrc
@@ -1,4 +1,6 @@
 {
+  "singleAttributePerLine": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 250
 }
