feat(NestJS): typeORM 一对一、一对多关联关系

--- a/nodedoc/handle/nestjs/case/nest-demo/.prettierrc
+++ b/nodedoc/handle/nestjs/case/nest-demo/.prettierrc
@@ -1,6 +1,4 @@
 {
-  "singleAttributePerLine": false,
   "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 250
+  "trailingComma": "all"
 }
