fix(NestJS): typeORM生成器，根据已有数据库生成ORM模型

--- a/nodedoc/handle/nestjs/case/nest-demo/package.json
+++ b/nodedoc/handle/nestjs/case/nest-demo/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "generate:models": "typeorm-model-generator -h 192.168.203.132 -p 3306 -d lzo_node_nestjs -u root -x Lzx542684.@ -e mysql -o ./generatorTest"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -33,7 +34,8 @@
     "mysql2": "^3.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.21"
+    "typeorm": "^0.3.21",
+    "typeorm-model-generator": "^0.4.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
