--- a/nodedoc/handle/nestjs/case/nest-demo/package.json
+++ b/nodedoc/handle/nestjs/case/nest-demo/package.json
@@ -36,6 +36,9 @@
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "mysql2": "^3.14.0",
+    "nestjs-pino": "^4.4.0",
+    "pino-pretty": "^13.0.0",
+    "pino-roll": "^3.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.21",
