--- a/nodedoc/handle/nestjs/case/nest-demo/package.json
+++ b/nodedoc/handle/nestjs/case/nest-demo/package.json
@@ -38,6 +38,7 @@
     "pino-pretty": "^13.0.0",
     "pino-roll": "^3.1.0",
     "reflect-metadata": "^0.2.2",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
     "swagger-themes": "^1.4.3",
     "typeorm": "^0.3.21",
@@ -58,6 +59,7 @@
     "@types/lodash": "^4.17.16",
     "@types/mockjs": "^1.0.10",
     "@types/node": "^22.10.7",
+    "@types/request-ip": "^0.0.41",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
