--- a/nodedoc/handle/nestjs/case/nest-demo/.env.development
+++ b/nodedoc/handle/nestjs/case/nest-demo/.env.development
@@ -8,7 +8,7 @@ DB_ACCOUNT=root
 DB_PASSWD=Lzx542684.@
 DB_HOST=192.168.203.132
 DB_PORT=3306
-DB_SYNC=true
+DB_SYNC=false
 
 REDIS_URL=redis://192.168.203.132:6379
 REDIS_PASSWD=Lzx542684.@
