--- a/nodedoc/handle/nestjs/case/nest-demo/package.json
+++ b/nodedoc/handle/nestjs/case/nest-demo/package.json
@@ -18,7 +18,13 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "generate:models": "typeorm-model-generator -h 192.168.203.132 -p 3306 -d lzo_node_nestjs -u root -x Lzx542684.@ -e mysql -o ./generatorTest"
+    "generate:models": "typeorm-model-generator -h 192.168.203.132 -p 3306 -d lzo_node_nestjs -u root -x Lzx542684.@ -e mysql -o ./generatorTest",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm migration:generate -- -n",
+    "migration:run": "npm run typeorm migration:run",
+    "migration:revert": "npm run typeorm migration:revert",
+    "schema:sync": "npm run typeorm schema:sync",
+    "schema:drop": "npm run typeorm schema:drop"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
